<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.pdf</groupId>
    <artifactId>pdfdesigner</artifactId>

    <version>0.3.0</version>
    <packaging>jar</packaging>

    <name>PDF Designer Form</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <library.folder>lib</library.folder>

        <maven.version>3.5.4</maven.version>
        <java.version>10</java.version>

        <checkstyle.plugin.version>2.17</checkstyle.plugin.version>
        <pitest.plugin.version>1.3.1</pitest.plugin.version>
        <findbugs.plugin.version>3.0.3</findbugs.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.jpedal</groupId>
            <artifactId>jpedal-lgpl</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/jpedal.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>dk.navicon</groupId>
            <artifactId>vldocking</artifactId>
            <version>3.0.4</version>
        </dependency>
        <dependency>
            <groupId>com.lowagie</groupId>
            <artifactId>itext</artifactId>
            <version>4.2.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>27.0.1-jre</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.3.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M2</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>${maven.version}</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                                <requireOS>
                                    <family>unix</family>
                                </requireOS>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/${library.folder}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/libs</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>${library.folder}</classpathPrefix>
                            <mainClass>org.pdf.forms.Application</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Class-Path>${library.folder}/jpedal.jar</Class-Path>
                        </manifestEntries>
                    </archive>
                    <finalName>pdfforms</finalName>
                </configuration>
            </plugin>

            <!-- copy jars and libs from modules into one folder  -->
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/${library.folder}</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Run on CI server (extended checks) -->
        <profile>
            <id>ci</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <version>${checkstyle.plugin.version}</version>
                        </plugin>

                        <plugin>
                            <groupId>org.pitest</groupId>
                            <artifactId>pitest-maven</artifactId>
                            <version>${pitest.plugin.version}</version>
                        </plugin>

                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>${findbugs.plugin.version}</version>
                        </plugin>
                    </plugins>
                </pluginManagement>

                <plugins>
                    <plugin>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <configuration>
                            <configLocation>checkstyle-configuration.xml</configLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                            <excludes>de/brands4friends/generated/**/*</excludes>
                            <failsOnError>true</failsOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!--<plugin>-->
                        <!--<groupId>org.pitest</groupId>-->
                        <!--<artifactId>pitest-maven</artifactId>-->
                        <!--<configuration>-->
                            <!--<targetClasses>-->
                                <!--<param>de.brands4friends.message.*</param>-->
                            <!--</targetClasses>-->
                            <!--<targetTests>-->
                                <!--<param>de.brands4friends.*</param>-->
                            <!--</targetTests>-->
                            <!--<reportsDirectory>${project.reporting.outputDirectory}/pit-report</reportsDirectory>-->
                            <!--<excludedGroups>-->
                                <!--<excludedGroup>de.brands4friends.testing.mutations.SkipPitUnitTestMutation</excludedGroup>-->
                            <!--</excludedGroups>-->
                        <!--</configuration>-->
                        <!--<executions>-->
                            <!--<execution>-->
                                <!--<phase>prepare-package</phase>-->
                                <!--<goals>-->
                                    <!--<goal>mutationCoverage</goal>-->
                                <!--</goals>-->
                            <!--</execution>-->
                        <!--</executions>-->
                    <!--</plugin>-->

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>findbugs-maven-plugin</artifactId>
                        <configuration>
                            <!--
                                Enables analysis which takes more memory but finds more bugs.
                                In case of OutOfMemory changes the value of the effort element to 'Low'.
                            -->
                            <effort>Max</effort>
                            <threshold>Default</threshold>
                            <xmlOutput>true</xmlOutput>
                            <!--<excludeFilterFile>${project.basedir}/../findbugs-exclude.xml</excludeFilterFile>-->
                            <findbugsXmlOutputDirectory>${project.reporting.outputDirectory}/findbugs-report</findbugsXmlOutputDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
